--- a/codesk_pricelist_bonus/views/product_pricelist_views.xml
+++ b/codesk_pricelist_bonus/views/product_pricelist_views.xml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="custom_product_pricelist_item_form_view" model="ir.ui.view">
-            <field name="name">custom.product.pricelist.item.form</field>
-            <field name="model">product.pricelist.item</field>
-            <field name="inherit_id" ref="product.product_pricelist_item_form_view"/>
+        <record id="custom_product_category_form_view" model="ir.ui.view">
+            <field name="name">custom.product.category.form.view</field>
+            <field name="model">product.category</field>
+            <field name="inherit_id" ref="product.product_category_form_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//group[@name='pricelist_rule_base']" position="inside">
-                    <field name="ordered_quantity" attrs="{'invisible':[('compute_price', '!=', 'bonus')]}"/>
-                    <field name="bonus_quantity" attrs="{'invisible':[('compute_price', '!=', 'bonus')]}"/>
+                <group name="first" position="after">
+                    <group name="bonus_rules" >
+                        <group string="Bonus Rules">
+                            <field name="has_bonus"/>
+                            <field name="ordered_quantity" attrs="{'invisible': [('has_bonus', '=', False)]}"/>
+                            <field name="bonus_quantity" attrs="{'invisible': [('has_bonus', '=', False)]}"/>
+                        </group>
+                    </group>
+                </group>
+            </field>
+        </record>
+        <record id="custom_product_template_only_form_view" model="ir.ui.view">
+            <field name="name">custom.product.template.only.form.view</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//page[@name='variants']" position="after">
+                    <page name="bonus_rules" string="Bonus Rules">
+                        <group>
+                            <field name="has_bonus" string="Has Bonus"/>
+                            <field name="ordered_quantity" attrs="{'invisible': [('has_bonus', '=', False)]}" string="Ordered Quantity"/>
+                            <field name="bonus_quantity" attrs="{'invisible': [('has_bonus', '=', False)]}" string="Bonus Quantity"/>
+                        </group>
+                    </page>
                 </xpath>
             </field>
         </record>
-
         <record id="view_order_line_tree_bonus" model="ir.ui.view">
             <field name="name">sale.order.line.tree.bonus</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
@@ -20,11 +40,10 @@
             <field name="arch" type="xml">
                 <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='product_uom_qty']" position="after">
                      <field name="bonus_quantity"/>
-                     <field name="active" invisible="1"/>
+                     <field name="is_bonus" attrs="{'column_invisible':[(1, '==', 1)]}"/>
                 </xpath>
             </field>
         </record>
-
         <record id="view_move_form_bonus" model="ir.ui.view">
             <field name="name">account.move.view.move.form.bonus</field>
             <field name="inherit_id" ref="account.view_move_form"/>
